Fix broken layout on certain screen sizes
Remove reference to nonexistent script

--- a/WebSudoku/Layout/MainLayout.razor
+++ b/WebSudoku/Layout/MainLayout.razor
@@ -2,7 +2,7 @@
 @inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar hide-in-print">
+    <div class="sidebar hide-in-print d-flex flex-column">
         <NavMenu @ref="navMenu" />
     </div>
 
