--- a/WebSudoku/Shared/Cell.razor
+++ b/WebSudoku/Shared/Cell.razor
@@ -1,6 +1,6 @@
 ﻿@if (ReadOnly)
 {
-    <input class="text-center sudoku-input input-readonly" style="background-color: white; align-content: center" readonly="readonly" value="@Value" 
+    <input class="text-center sudoku-input input-readonly" style="align-content: center" readonly="readonly" value="@Value" 
         @onkeydown="OnKeyDown" />
 }
 else
