Update styling and images

--- a/WebSudoku/Layout/MainLayout.razor
+++ b/WebSudoku/Layout/MainLayout.razor
@@ -16,6 +16,11 @@
             --input-fg-color: black !important;
             --link-color: #0068ff !important;
             --cell-editable-text-color: lightgray;
+            --cell-error-highlight: #ed0000 !important;
+        }
+
+        .input-editable.error-highlight {
+            --cell-editable-text-color: white !important;
         }
     </style>
 }
