--- a/WebSudoku/Layout/MainLayout.razor
+++ b/WebSudoku/Layout/MainLayout.razor
@@ -27,7 +27,7 @@
 
 <CascadingValue Value="this">
     <div class="page">
-        <div class="sidebar hide-in-print d-flex flex-column">
+        <div class="sidebar d-print-none d-flex flex-column">
             <NavMenu @ref="navMenu" />
         </div>
 
