--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -39,7 +39,7 @@
             </NavLink>
         </div>
 
-        <div class="bottom-0 nav-item px-3 hide-in-print">
+        <div class="bottom-0 nav-item px-3 d-print-none">
             <a class="text-decoration-underline nav-link" href="https://github.com/APB97/WebSudoku" target="_blank">Code</a>
         </div>
     </nav>
