--- a/WebSudoku/Shared/TimerDisplay.razor
+++ b/WebSudoku/Shared/TimerDisplay.razor
@@ -1,5 +1,5 @@
-﻿<span class="hide-in-print">Your time: </span>
-<span class="hide-in-print">@SpanToShow</span>
+﻿<span class="d-print-none">Your time: </span>
+<span class="d-print-none">@SpanToShow</span>
 
 @code {
     [Parameter]
