Update README.md and Index.razor
Clean up local variables in PrintMultiple.razor

--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -18,8 +18,8 @@
 <ul>
     <li>
         <strong class="text-decoration-underline">Print multiple</strong> <strong><span class="text-decoration-none text-uppercase text-primary">New</span></strong>:
-        Separate page which allows preparing sudokus for printing by adding 2, 4 or 8 additional boards at once.
-        Also includes <b>Clear all</b> button for starting from scratch by clearing all boards on the page.
+        Separate page which allows preparing mulitple sudoku boards and allows generating adjustable amount of additional sudoku boards at once.
+        Every board can be regenerated or removed. Also includes <b>Clear all</b> button for starting from scratch by clearing all boards on the page.
     </li>
     <li>
         <strong class="text-decoration-underline">Saving and loading</strong>: Sudoku state can be saved and loaded. Currently saves to and loads from browser's LocalStorage.
@@ -47,6 +47,7 @@
     <li>
         <strong class="text-decoration-underline">Navigation</strong>: You can navigate cells within the sudoku board using arrow keys.
         Supports moving between the first and the last cell in a row or column.
+        Pressing "Enter" allows to navigate to the next cell, or to the top-left one if pressed in the bottom-right cell.
         Target cell will have its value selected.
     </li>
 </ul>
