Replace previous implementation of NavigationManagerExtensions
Add removeSessionSetting to .js/utitlities.js and RemoveSessionSettingAsync to JSObjectReferenceExtensions

Add getSessionSetting to .js/utitlities.js and getSessionSettingAsync to JSObjectReferenceExtensions

Use JSModules.UtilitiesModule instead of hardcoded String

Add JSModules class

Remove LocalStorage class

--- a/WebSudoku/Layout/MainLayout.razor
+++ b/WebSudoku/Layout/MainLayout.razor
@@ -48,8 +48,8 @@
 
     protected override async Task OnInitializedAsync()
     {
-        utilitiesModule = await JS.InvokeAsync<IJSObjectReference>("import", "./js/utilities.js");
-        var mode = await utilitiesModule.GetSetting<string>("LayoutMode");
+        utilitiesModule = await JS.InvokeAsync<IJSObjectReference>("import", JSModules.UtilitiesModule);
+        var mode = await utilitiesModule.GetSettingAsync<string>("LayoutMode");
         if (mode is null) return;
         LayoutMode = mode;
     }
