--- a/WebSudoku/_Imports.razor
+++ b/WebSudoku/_Imports.razor
@@ -7,7 +7,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using WebSudoku
-@using WebSudoku.JsHelpers
+@using WebSudoku.JSInterop
 @using WebSudoku.Layout
 @using WebSudoku.Shared.Keys
 @using WebSudoku.Extensions
