Update root namespace
Use file-scoped namespaces

--- a/WebSudoku/Pages/PrintMultiple.razor
+++ b/WebSudoku/Pages/PrintMultiple.razor
@@ -1,10 +1,9 @@
 ﻿@page "/printMultiple"
 
 @using System.Globalization
-@using WebSudoku.Extensions
-@using WebSudoku.Shared
-@using WebSudoku.Shared.General
 @using WebSudoku.Shared.Sudoku
+@using apb97.github.io.WebSudoku.Shared
+@using apb97.github.io.WebSudoku.Shared.General
 
 @implements IAsyncDisposable
 
