--- a/WebSudoku/Pages/Sudoku.razor
+++ b/WebSudoku/Pages/Sudoku.razor
@@ -1,10 +1,10 @@
 ﻿@page "/sudoku"
 @using System.Linq
 @using RangeAttribute = System.ComponentModel.DataAnnotations.RangeAttribute
-@using WebSudoku.Shared
-@using WebSudoku.Shared.General
-@using WebSudoku.Shared.Serialization
-@using WebSudoku.Shared.Sudoku
+@using apb97.github.io.WebSudoku.Shared
+@using apb97.github.io.WebSudoku.Shared.General
+@using apb97.github.io.WebSudoku.Shared.Serialization
+@using apb97.github.io.WebSudoku.Shared.Sudoku
 
 @inject CountingSolver Solver
 @inject Blanker Blanker
