--- a/WebSudoku/Shared/PrintSettings.razor
+++ b/WebSudoku/Shared/PrintSettings.razor
@@ -1,5 +1,4 @@
-﻿@using WebSudoku.Extensions
-@inject IJSRuntime JS
+﻿@inject IJSRuntime JS
 
 <button class="btn btn-primary" @onclick="() => showPrintSettings = !showPrintSettings">@(showPrintSettings ? "Hide" : "Show") print settings</button>
 
