--- a/WebSudoku/Shared/Cell.razor
+++ b/WebSudoku/Shared/Cell.razor
@@ -33,7 +33,7 @@ else
     public EventCallback<KeyboardEventArgs> OnKeyDown { get; set; }
 
     /// <summary>
-    /// If true, input type changes between 'text' and 'number' on gaining and losing focus. Can be set to show numeric keyboard on mobile.
+    /// If true, input type changes between 'text' and 'number' on gaining and losing focus. Can be set to show numeric keyboard on mobile (does NOT work in Firefox).
     /// </summary>
     [Parameter]
     public bool SwitchTypeOnFocus { get; set; } = true;
