WiP on adding localization

--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using apb97.github.io.WebSudoku.Shared
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="https://apb97.github.io">APB97</a>
         <button style="border: none; background-color: transparent; padding: 0;" @onclick="() => Layout.ToggleLayoutMode()">
@@ -15,14 +16,17 @@
                 </div>
             }
         </button>
+        <div class="navbar-language-select">
+            <LanguageSelect />
+        </div>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </div>
 
-<div style="overflow-y: auto;" class="@NavMenuCssClass" @onclick="CollapseNavMenu">
-    <nav class="flex-column">
+<div style="overflow-y: auto;" class="@NavMenuCssClass d-flex flex-grow-1" @onclick="CollapseNavMenu">
+    <nav class="d-flex flex-column flex-grow-1">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="rules" Match="NavLinkMatch.All">
                 Sudoku Rules
@@ -39,8 +43,16 @@
             </NavLink>
         </div>
 
-        <div class="bottom-0 nav-item px-3 d-print-none">
+        <div class="flex-grow-1" />
+
+        <div class="nav-item px-3">
             <a class="text-decoration-underline nav-link" href="https://github.com/APB97/WebSudoku" target="_blank">Code</a>
+        </div>
+
+        <div class="nav-item px-3">
+            <div class="nav-link">
+                <LanguageSelect />
+            </div>
         </div>
     </nav>
 </div>
