--- a/WebSudoku/Layout/NavMenu.razor.css
+++ b/WebSudoku/Layout/NavMenu.razor.css
@@ -58,6 +58,10 @@
         display: none;
     }
 
+    .navbar-language-select {
+        display: none;
+    }
+
     .collapse {
         /* Never collapse the sidebar for wide screens */
         display: block;
