--- a/WebSudoku/_Imports.razor
+++ b/WebSudoku/_Imports.razor
@@ -11,3 +11,4 @@
 @using WebSudoku.Layout
 @using apb97.github.io.WebSudoku.Shared.Keys
 @using apb97.github.io.WebSudoku.Extensions
+@using apb97.github.io.WebSudoku.Services.Localization
