--- a/WebSudoku/Layout/MainLayout.razor
+++ b/WebSudoku/Layout/MainLayout.razor
@@ -46,6 +46,8 @@
 
     public string LayoutMode { get; private set; } = "Dark";
 
+    public static event Func<Task> OnStateChanging = delegate { return Task.CompletedTask; };
+
     protected override async Task OnInitializedAsync()
     {
         utilitiesModule = await JS.InvokeAsync<IJSObjectReference>("import", JSModules.UtilitiesModule);
@@ -57,6 +59,12 @@
     public void ToggleLayoutMode()
     {
         LayoutMode = LayoutMode == "Dark" ? "Light" : "Dark";
+        StateHasChanged();
+    }
+
+    public async Task NotifyStateChanged()
+    {
+        await OnStateChanging.Invoke();
         StateHasChanged();
     }
 
