--- a/WebSudoku/Pages/PrintMultiple.razor
+++ b/WebSudoku/Pages/PrintMultiple.razor
@@ -1,9 +1,9 @@
 ﻿@page "/printMultiple"
 
 @using System.Globalization
-@using WebSudoku.Shared.Sudoku
 @using apb97.github.io.WebSudoku.Shared
 @using apb97.github.io.WebSudoku.Shared.General
+@using apb97.github.io.WebSudoku.Shared.Sudoku
 
 @implements IAsyncDisposable
 
@@ -11,57 +11,61 @@
 @inject Blanker Blanker
 @inject Validator Validator
 @inject IJSRuntime JS
+@inject StringLocalizer<PrintMultiple> Localization
 
-<PageTitle>Web Sudoku - print multiple</PageTitle>
-
-<div class="d-print-none">
-    <button class="btn btn-danger" @onclick="boards.Clear">Clear all</button>
-    <label for="width">Board width [%]</label>
-    <InputSelect id="width" TValue="float" Value="boardWidthPercentage" ValueExpression="() => boardWidthPercentage" ValueChanged="UpdateBoardWidth">
-        <option value="33.3333">33%</option>
-        <option value="50">50%</option>
-        <option value="100">100%</option>
-    </InputSelect>
-    <label for="boards-amount">Boards to generate</label>
-    <InputNumber id="boards-amount" min="1" max="32" @bind-Value="boardsToGenerate" />
-    <button disabled="@(generating ? "disabled" : null)" class="btn btn-primary" @onclick="GenerateBoards">Add @boardsToGenerate sudoku(s)</button>
-    <button class="btn btn-secondary" onclick="print()">Print</button>
-</div>
-
-@if (generating)
+@if (ShouldRender())
 {
-    <div class="border border-2 border-info">Generating additional sudokus...</div>
-}
+    <PageTitle>Web Sudoku - @Localization.Localize("print multiple")</PageTitle>
 
-<div class="d-flex flex-wrap">
-    @foreach (var board in boards)
+    <div class="d-print-none">
+        <button class="btn btn-danger" @onclick="boards.Clear">@Localization.Localize("Clear all")</button>
+        <label for="width">@Localization.Localize("Board width") [%]</label>
+        <InputSelect id="width" TValue="float" Value="boardWidthPercentage" ValueExpression="() => boardWidthPercentage" ValueChanged="UpdateBoardWidth">
+            <option value="33.3333">33%</option>
+            <option value="50">50%</option>
+            <option value="100">100%</option>
+        </InputSelect>
+        <label for="boards-amount">@Localization.Localize("Boards to generate")</label>
+        <InputNumber id="boards-amount" min="1" max="32" @bind-Value="boardsToGenerate" />
+        <button disabled="@(generating ? "disabled" : null)" class="btn btn-primary" @onclick="GenerateBoards">@Localization.Localize("Add") @boardsToGenerate @Localization.Localize("sudoku(s)")</button>
+        <button class="btn btn-secondary" onclick="print()">@Localization.Localize("Print")</button>
+    </div>
+
+    @if (generating)
     {
-        <div class="p-2" style="break-inside: avoid-page; width: @boardWidthPercentage.ToString(CultureInfo.InvariantCulture)%;">
-            <table class="sudoku-table" style="border-spacing: 0px;">
-                @for (int r = 0; r < Board.BoardSize; r++)
-                {
-                    <tr>
-                        @for (int c = 0; c < Board.BoardSize; c++)
-                        {
-                            // these local variable is here to cache value of Cell on the board
-                            var value = board.GetValueAt((r, c));
-                            <td>
-                                <Cell ReadOnly="true" HighlightClass="@null"
-                                    Value="@(value != 0 ? value.ToString() : string.Empty)"
-                                    SwitchTypeOnFocus="false"
-                                    />
-                            </td>
-                        }
-                    </tr>
-                }
-            </table>
-            <div class="d-print-none">
-                <button class="btn btn-danger" @onclick="() => boards.Remove(board)">Remove board</button>
-                <button class="btn btn-success" disabled="@(generating ? "disabled" : null)" @onclick="() => Regenerate(board)">Regenerate board</button>
-            </div>
-        </div>
+        <div class="border border-2 border-info">Generating additional sudokus...</div>
     }
-</div>
+
+    <div class="d-flex flex-wrap">
+        @foreach (var board in boards)
+        {
+            <div class="p-2" style="break-inside: avoid-page; width: @boardWidthPercentage.ToString(CultureInfo.InvariantCulture)%;">
+                <table class="sudoku-table" style="border-spacing: 0px;">
+                    @for (int r = 0; r < Board.BoardSize; r++)
+                    {
+                        <tr>
+                            @for (int c = 0; c < Board.BoardSize; c++)
+                            {
+                                // these local variable is here to cache value of Cell on the board
+                                var value = board.GetValueAt((r, c));
+                                <td>
+                                    <Cell ReadOnly="true" HighlightClass="@null"
+                                        Value="@(value != 0 ? value.ToString() : string.Empty)"
+                                        SwitchTypeOnFocus="false"
+                                        />
+                                </td>
+                            }
+                        </tr>
+                    }
+                </table>
+                <div class="d-print-none">
+                    <button class="btn btn-danger" @onclick="() => boards.Remove(board)">Remove board</button>
+                    <button class="btn btn-success" disabled="@(generating ? "disabled" : null)" @onclick="() => Regenerate(board)">Regenerate board</button>
+                </div>
+            </div>
+        }
+    </div>
+}
 
 @code {
     private List<Board> boards = [];
@@ -74,8 +78,15 @@
 
     private IJSObjectReference? utilities;
 
+    protected override bool ShouldRender()
+    {
+        return Localization.IsReady;
+    }
+
     protected override async Task OnInitializedAsync()
     {
+        MainLayout.OnStateChanging += LoadResourcesAsync;
+        await Localization.InitializeAsync(LanguageSelect.Culture);
         utilities = await JS.InvokeAsync<IJSObjectReference>("import", JSModules.UtilitiesModule);
         var setting = await utilities.GetSettingAsync<string>("printMultiple_boardWidthPercentage");
         if (!float.TryParse(setting, CultureInfo.InvariantCulture, out var result)) return;
@@ -143,8 +154,15 @@
         }
     }
 
+    private async Task LoadResourcesAsync()
+    {
+        await Localization.InitializeAsync(LanguageSelect.Culture);
+        StateHasChanged();
+    }
+
     async ValueTask IAsyncDisposable.DisposeAsync()
     {
+        MainLayout.OnStateChanging -= LoadResourcesAsync;
         if (utilities is null) return;
         await utilities.DisposeAsync();
     }
